fix canvas flicker on resize

--- a/design/src/base.css
+++ b/design/src/base.css
@@ -5,6 +5,7 @@
   --border-radius-large: 11px;
   --gap: 1em;
   --gap-small: 0.5em;
+  --text-color: black;
   --text-padding: 2px 9px;
 }
 
@@ -20,16 +21,16 @@ html {
 
 *::selection {
   background-color: gainsboro;
-  color: black;
+  color: var(--text-color);
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
   min-height: 100svh;
-  padding: 1em;
+  padding: var(--gap);
   background-color: ${themeColor};
-  color: black;
+  color: var(--text-color);
 }
 
 input, button, select {
@@ -40,6 +41,7 @@ input, button, select {
   background-color: white;
   border-radius: var(--border-radius-small);
   padding: var(--text-padding);
+  color: var(--text-color);
 }
 
 input:focus, button:focus {
